# ynab-rs

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
components/ynab-api/: Cargo.toml
components/ynab-api/src/: lib.rs  types.rs
components/ynab-cli/: Cargo.toml  README.md
components/ynab-cli/src/: lib.rs
components/ynab-types/: Cargo.toml
components/ynab-types/src/: lib.rs
examples/: create_gcal_events.rs  icalendar_rrules.rs  list_scheduled_transactions.rs
src/: README.md  lib.rs  main.rs
src/api_types/: mod.rs
src/ext_rfc5545/: mod.rs
