[package]
name = "ynab-api"
version = "0.0.1"
description = "The implementation of the YNAB API"
repository = "https://github.com/Phrohdoh/ynab-rs"
authors = ["Taryn Hill <taryn@phrohdoh.com>"]
edition = "2018"

[dependencies]
ynab-types = { path = "../ynab-types", features = ["serde"] }
reqwest = "^0.9"
url = "^1.7"
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
