[package]
name = "ynab-cli"
version = "0.0.1"
description = "The opinionated command-line interface to the YNAB set of crates"
repository = "https://github.com/Phrohdoh/ynab-rs"
authors = ["Taryn Hill <taryn@phrohdoh.com>"]
edition = "2018"

[dependencies]
ynab-api = { path = "../ynab-api" }
structopt = "^0.2"
reqwest = "^0.9"
serde_json = "^1.0"
uuid = { version = "^0.7", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
